--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
     "mout": "0.x"
   },
   "devDependencies": {
-    "mocha": "1.x",
-    "should": "1.x",
-    "jshint": "2.x",
+    "@dynamicaction/eslint-config-dna": "^2.0.0-pre.2",
+    "mocha": "^6.0.0",
+    "should": "~3.0.0",
     "nixt": ">=0.0.2 <1.0"
   },
   "engines": {
-    "node": ">=6.0"
+    "node": ">=12.0"
   }
 }
